--- a/content/courses/stat220/PAT.Rmd
+++ b/content/courses/stat220/PAT.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Cache credentials for RStudio and GitHub"
-description: |
-  This is a brief overview of how to store your GitHub PAT so that
-  you can more easily work with GitHub via RStudio. 
+description: "This is a brief overview of how to store your GitHub PAT so that\nyou
+  can more easily work with GitHub via RStudio. \n"
 ---
 
 ```{r setup, include=FALSE}
